# FiducialMarkers

./: README.md
fiducial_localization/src/: CMakeLists.txt  FiducialLocalization.cxx  IcpMeshRegistration.cxx  IcpMeshRegistration.h  ImageIO.cxx  ImageIO.h  MeshExtraction.cxx  MeshExtraction.h  VtkMeshSurfaceExtraction.cxx  VtkMeshSurfaceExtraction.h
fiducial_localization/src/test_data/mesh_outputs/: A3_D2_L1.vtk  A3_D2_L2.vtk  A3_D2_L3.vtk  A3_D2_L4.vtk  CONRAD_SCREW_4p5mm_L1.vtk  CONRAD_SCREW_4p5mm_L10.vtk  CONRAD_SCREW_4p5mm_L11.vtk  CONRAD_SCREW_4p5mm_L12.vtk  CONRAD_SCREW_4p5mm_L13.vtk  CONRAD_SCREW_4p5mm_L14.vtk  CONRAD_SCREW_4p5mm_L15.vtk  CONRAD_SCREW_4p5mm_L2.vtk  CONRAD_SCREW_4p5mm_L3.vtk  CONRAD_SCREW_4p5mm_L4.vtk  CONRAD_SCREW_4p5mm_L5.vtk  CONRAD_SCREW_4p5mm_L6.vtk  CONRAD_SCREW_4p5mm_L7.vtk  CONRAD_SCREW_4p5mm_L8.vtk  CONRAD_SCREW_4p5mm_L9.vtk
fiducial_localization/src/test_data/reference_mesh/: rhinospider.stl  single_screw_2x3.stl  single_screw_3x3p75.stl  single_screw_3x4p5.stl
fiducial_localization/src/test_data/screws/: CONRAD_SCREW_4p5mm_L1.mhd  CONRAD_SCREW_4p5mm_L1.raw  CONRAD_SCREW_4p5mm_L10.mhd  CONRAD_SCREW_4p5mm_L10.raw  CONRAD_SCREW_4p5mm_L11.mhd  CONRAD_SCREW_4p5mm_L11.raw  (+24 more)
fiducial_segmentation_gpu/src/: CMakeLists.txt  GPUBinaryDilateImageFilter.cl  GPUBinaryErodeImageFilter.cl  SegmentFiducialMarkersGPU.cxx  itkGPUBinaryDilateImageFilter.h  itkGPUBinaryDilateImageFilter.hxx  itkGPUBinaryErodeImageFilter.h  itkGPUBinaryErodeImageFilter.hxx  itkGPUBinaryMorphologyImageFilter.h  itkGPUBinaryMorphologyImageFilter.hxx
(+24 files in other folders)
